# langgraph-multi-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml  pages.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/agents/: critic.py  executor.py  graph.py  planner.py  researcher.py  state.py
backend/app/routers/: tasks.py
backend/app/tools/: code_executor.py  file_writer.py  search.py
backend/tests/: conftest.py  test_agents.py  test_tools.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AgentCard.jsx  AgentTimeline.jsx  OutputPanel.jsx  TaskInput.jsx  ThoughtBubble.jsx  ToolCallCard.jsx
frontend/src/hooks/: useTaskStream.js  useTasks.js
